# practika-SortingAnalysis

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: build-release.yml  create-sorting-tasks.yml
src/SortingAnalysis/: SortingAnalysis.vcxproj.filters.note.txt  main.cpp
src/SortingAnalysis/core/: ISortAlgorithm.h  SortRegistry.h  SortStatistics.h
src/SortingAnalysis/sorts/: AllSorts.h  BinaryInsertionSort.h  BubbleSort.h  BubbleSortSwapFlag.h  CocktailSort.h  CountingSort.h  HeapSort.h  InsertionSort.h  MergeSort.h  QuickSortHoare.h  QuickSortLomuto.h  RadixSort.h  SelectionSort.h  ShellSort.h
src/SortingAnalysis/utils/: ArrayUtils.h  Console.h  FileUtils.h  Input.h  StringUtils.h
